# pyflow

./: .buildinfo  .gitignore  CLI.md  LICENSE.txt  Makefile  OVERVIEW.md  README.md  cli.html  conftest.py  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup-dev.sh  setup.py
.github/workflows/: pyflow_ci.yml
_sources/analysis/: cfgIR.rst.txt  cpa.rst.txt  ipa.rst.txt  lifetimeanalysis.rst.txt  shape.rst.txt
_sources/checker/: sec.rst.txt
_sources/optimization/: index.rst.txt
analysis/: callgraph.html  cdg.html  cfg.html  cfgIR.html  cpa.html  index.html  ipa.html  lifetimeanalysis.html  shape.html  storegraph.html
checker/: sec.html
docs/source/: cli.rst  conf.py  index.rst  overview.rst
docs/utils/: import_graph.rst
evaluation/: Benchmarks.md  Tools.md
examples/: README.md  advanced_oop.py  advanced_typing.py  async_await.py  basic_arithmetic.py  complex_nested.py  concurrency_threading.py  control_flow.py  data_structures.py  decorators_metaclasses.py  exception_handling.py  generators_iterators.py  imports_modules.py  lambda_closures.py  recursive_functions.py  test_cdg_simple.py  test_function.py  type_annotations.py
optimization/: index.html
scripts/tools/: checksanity.py  crunch.py  format.py  grep.py  xmloutput.py
src/pyflow/: __init__.py  _async.py  _pyflow.py  cli_main.py  config.py  testspider.py
tests/: fullcompiler.py  test_canonical.py  test_database.py  test_full.py  test_graphalgorithims.py  test_import_graph.py  test_ssa.py  test_tvl.py  test_util.py  test_utils.py
tests/callgraph/: args_test.py  assignments_test.py  base.py  builtins_test.py  classes_test.py  create_pytests.py  decorators_test.py  dicts_test.py  direct_calls_test.py  dynamic_test.py  exceptions_test.py  external_test.py  functions_test.py  generators_test.py  imports_test.py  kwargs_test.py  lambdas_test.py  lists_test.py  mro_test.py  returns_test.py
tests/checker/: conftest.py  test_blacklist.py  test_class_pollution.py  test_exec_and_shell.py  test_hardcoded_password.py  test_nosec.py  test_weak_crypto.py
tests/cpa/: test_cpa.py
tests/frontend/: __init__.py  test_ast_converter.py  test_dependency_resolver.py  test_function_extractor.py  test_object_manager.py  test_programextractor.py  test_stub_manager.py
tests/full/: body.py  confusion.py  example.py  linear.py  lists.py  loops.py  makeconfusion.py  makeexample.py  makelinear.py  makelists.py  makeloops.py  makepystone.py  makerecursive.py  maketuples.py  (+5 more)
(+359 files in other folders)
